Update package.json for adding keywords

--- a/package.json
+++ b/package.json
@@ -50,6 +50,14 @@
       "last 1 safari version"
     ]
   },
+  "keywords": [
+    "aman",
+    "pandia",
+    "portfolio",
+    "pandiaaman",
+    "amanpandia",
+    "experience"
+  ],
   "env": {
     "browser": true,
     "es2021": true,
