--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.4",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
@@ -53,10 +54,34 @@
   "keywords": [
     "aman",
     "pandia",
-    "portfolio",
-    "pandiaaman",
     "amanpandia",
-    "experience"
+    "pandiaaman",
+    "pandia aman",
+    "aman pandia",
+    "pandya",
+    "portfolio",
+    "experience",
+    "full stack developer",
+    "software architect",
+    "UI/UX designer",
+    "Java developer",
+    "React developer",
+    "Spring Boot",
+    "AWS",
+    "machine learning",
+    "microservices",
+    "DevOps",
+    "State Street",
+    "GlobalLogic",
+    "BITS Pilani",
+    "SRM IST",
+    "patents",
+    "research",
+    "projects",
+    "skills",
+    "certifications",
+    "achievements",
+    "recommendations"
   ],
   "env": {
     "browser": true,
